--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,7 @@
     </div>
     
     <footer>
-        <p>&copy; {{ year }} Learning League | <a href="{{ url_for('main.index') }}">Home</a></p>
+        <p>&copy; {{ year }} School Management Portal | <a href="{{ url_for('main.index') }}">Home</a></p>
     </footer>
 </body>
 </html>
