--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,14 +1,18 @@
-/* body {
-    font-family: Arial, sans-serif;
-} */
-
-body {
-    font-family: 'Arial', sans-serif;
+html, body {
     margin: 0;
     padding: 0;
-    color: #333;
-    background-color: #f9f9f9;
+    height: 100%;
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
 }
+
+/* Main container */
+.container {
+    flex: 1;
+    padding: 20px;
+}
+
 
 /* Landing Page Styling */
 .landing-container {
@@ -16,6 +20,9 @@ body {
     padding: 50px 20px;
     max-width: 1200px;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .hero {
@@ -81,13 +88,13 @@ body {
     font-size: 0.9em;
 }
 
-/* Footer Styling */
+/* Footer styling */
 footer {
     background-color: #333;
     color: white;
-    padding: 20px;
     text-align: center;
-    margin-top: 40px;
+    padding: 10px 20px;
+    position: relative;
 }
 
 footer a {
@@ -146,4 +153,59 @@ th {
     padding: 10px 15px;
     text-decoration: none;
     border-radius: 5px;
+}
+
+/* login page styling */
+
+.form-container {
+    background-color: #ffffff;
+    padding: 40px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    max-width: 400px;
+    width: 100%;
+}
+
+/* Styling the form */
+form {
+    margin: 0;
+}
+
+form label {
+    font-size: 16px;
+    color: #333;
+    display: block;
+    margin-bottom: 8px;
+    text-align: left;
+}
+
+form input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+form button {
+    background-color: #333;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 100%;
+}
+
+form button:hover {
+    background-color: #555;
+}
+
+/* Heading styling */
+h2 {
+    color: #333;
+    margin-bottom: 20px;
 }
