--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Admin Login</h2>
-<form method="POST" action="{{ url_for('main.login') }}">
-    <label>Username</label><br>
-    <input type="text" name="username" required><br>
-    <label>Password</label><br>
-    <input type="password" name="password" required><br>
-    <button type="submit">Login</button>
-</form>
+<div class="form-container">
+    <h2>Admin Login</h2>
+    <form method="POST" action="{{ url_for('main.login') }}">
+        <label for="username">Username</label><br>
+        <input type="text" id="username" name="username" required><br>
+        <label for="password">Password</label><br>
+        <input type="password" id="password" name="password" required><br>
+        <button type="submit">Login</button>
+    </form>
+</div>
 {% endblock %}
+
