--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,22 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>School Management Portal</title>
+    <title>{% block title %}School Management Portal{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 </head>
 <body>
     <nav>
-        <a href="{{ url_for('main.index') }}">Home</a>
-        <a href="{{ url_for('main.students') }}">Students</a>
-        <a href="{{ url_for('main.teachers') }}">Teachers</a>
-        <a href="{{ url_for('main.classes') }}">Classes</a>
-        <a href="{{ url_for('main.grades') }}">Grades</a>
-        <a href="{{ url_for('main.attendance') }}">Attendance</a>
+        <a href="{{ url_for('main.index') }}" class="{% if request.endpoint == 'main.index' %}active{% endif %}">Home</a>
+        <a href="{{ url_for('main.add_subject') }}" class="{% if request.endpoint == 'main.add_subject' %}active{% endif %}">Add Subject</a>
+        <a href="{{ url_for('main.students') }}" class="{% if request.endpoint == 'main.students' %}active{% endif %}">Students</a>
+        <a href="{{ url_for('main.teachers') }}" class="{% if request.endpoint == 'main.teachers' %}active{% endif %}">Teachers</a>
+        <a href="{{ url_for('main.classes') }}" class="{% if request.endpoint == 'main.classes' %}active{% endif %}">Classes</a>
+        <a href="{{ url_for('main.grades') }}" class="{% if request.endpoint == 'main.grades' %}active{% endif %}">Grades</a>
+        <a href="{{ url_for('main.attendance') }}" class="{% if request.endpoint == 'main.attendance' %}active{% endif %}">Attendance</a>
         {% if current_user.is_authenticated %}
-            <a href="{{ url_for('main.dashboard') }}">Dashboard</a>
+            {% if current_user.is_admin %}
+                <a href="{{ url_for('main.register_school') }}" class="{% if request.endpoint == 'main.register_school' %}active{% endif %}">Register School</a>
+            {% endif %}
+            <a href="{{ url_for('main.dashboard') }}" class="{% if request.endpoint == 'main.dashboard' %}active{% endif %}">Dashboard</a>
             <a href="{{ url_for('main.logout') }}">Logout</a>
         {% else %}
-            <a href="{{ url_for('main.login') }}">Login</a>
+            <a href="{{ url_for('main.login') }}" class="{% if request.endpoint == 'main.login' %}active{% endif %}">Login</a>
         {% endif %}
     </nav>
     
