--- a/app/templates/teachers.html
+++ b/app/templates/teachers.html
@@ -6,27 +6,46 @@
     <thead>
         <tr>
             <th>ID</th>
+            <th>Photo</th>
             <th>First Name</th>
             <th>Last Name</th>
-            <th>Subject</th>
+            <th>Age</th>
+            <th>Date of Birth</th>
+            <th>Gender</th>
+            <th>Qualifications</th>
+            <th>Address</th>
+            <th>Date Employed</th>
+            <th>Subjects</th>
             <th>Email</th>
             <th>Phone</th>
-            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
         {% for teacher in teachers %}
         <tr>
             <td>{{ teacher.id }}</td>
+            <td>
+                {% if teacher.photo %}
+                    <img src="{{ url_for('static', filename='uploads/' + teacher.photo) }}" alt="Photo" width="50">
+                {% else %}
+                    No Photo
+                {% endif %}
+            </td>
             <td>{{ teacher.first_name }}</td>
             <td>{{ teacher.last_name }}</td>
-            <td>{{ teacher.subject }}</td>
-            <td>{{ teacher.email }}</td>
-            <td>{{ teacher.phone }}</td>
+            <td>{{ teacher.age }}</td>
+            <td>{{ teacher.date_of_birth }}</td>
+            <td>{{ teacher.gender }}</td>
+            <td>{{ teacher.qualification }}</td>
+            <td>{{ teacher.address }}</td>
+            <td>{{ teacher.hire_date }}</td>
             <td>
-                <a href="{{ url_for('main.edit_teacher', teacher_id=teacher.id) }}">Edit</a> |
-                <a href="{{ url_for('main.delete_teacher', teacher_id=teacher.id) }}">Delete</a>
+                {% for ts in teacher.subjects %}
+                    {{ ts.subject.name }}{% if not loop.last %}, {% endif %}
+                {% endfor %}
             </td>
+            <td>{{ teacher.email }}</td>
+            <td>{{ teacher.phone_number }}</td>
         </tr>
         {% endfor %}
     </tbody>
