--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h2>Admin Dashboard</h2>
+<p>Name of School: {{ school_name }}</p>
 <p>Total Students: {{ student_count }}</p>
 <p>Total Teachers: {{ teacher_count }}</p>
 <p>Total Classes: {{ class_count }}</p>
