--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,26 +6,13 @@
     <title>{% block title %}School Management Portal{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 </head>
 <body>
-    <nav>
-        <a href="{{ url_for('main.index') }}" class="{% if request.endpoint == 'main.index' %}active{% endif %}">Home</a>
-        <a href="{{ url_for('main.add_subject') }}" class="{% if request.endpoint == 'main.add_subject' %}active{% endif %}">Add Subject</a>
-        <a href="{{ url_for('main.students') }}" class="{% if request.endpoint == 'main.students' %}active{% endif %}">Students</a>
-        <a href="{{ url_for('main.teachers') }}" class="{% if request.endpoint == 'main.teachers' %}active{% endif %}">Teachers</a>
-        <a href="{{ url_for('main.classes') }}" class="{% if request.endpoint == 'main.classes' %}active{% endif %}">Classes</a>
-        <a href="{{ url_for('main.grades') }}" class="{% if request.endpoint == 'main.grades' %}active{% endif %}">Grades</a>
-        <a href="{{ url_for('main.attendance') }}" class="{% if request.endpoint == 'main.attendance' %}active{% endif %}">Attendance</a>
-        {% if current_user.is_authenticated %}
-            {% if current_user.is_admin %}
-                <a href="{{ url_for('main.register_school') }}" class="{% if request.endpoint == 'main.register_school' %}active{% endif %}">Register School</a>
-            {% endif %}
-            <a href="{{ url_for('main.dashboard') }}" class="{% if request.endpoint == 'main.dashboard' %}active{% endif %}">Dashboard</a>
-            <a href="{{ url_for('main.logout') }}">Logout</a>
-        {% else %}
-            <a href="{{ url_for('main.login') }}" class="{% if request.endpoint == 'main.login' %}active{% endif %}">Login</a>
-        {% endif %}
-    </nav>
+    {% include 'navigation.html' %}
     
     <div class="container">
         {% block content %}{% endblock %}
@@ -34,5 +21,14 @@
     <footer>
         <p>&copy; {{ year }} School Management Portal | <a href="{{ url_for('main.index') }}">Home</a></p>
     </footer>
+
+<script>
+    $(document).ready(function() {
+        $('.select2').select2({
+            placeholder: "Select teachers",
+            allowClear: true
+        });
+    });
+</script>
 </body>
 </html>
