--- a/app/templates/register_user.html
+++ b/app/templates/register_user.html
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register User</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
     <h1>Register User</h1>
     <form method="POST">
         {{ form.hidden_tag() }}
         <p>{{ form.username.label }} {{ form.username(class="form-control") }}</p>
         <p>{{ form.password.label }} {{ form.password(class="form-control") }}</p>
-        <p>{{ form.is_admin.label }} {{ form.is_admin() }}</p>
+        <p>{{ form.role.label }} {{ form.role(class="form-control") }}</p>
         <p>{{ form.school_id.label }} {{ form.school_id(class="form-control") }}</p>
         <p>{{ form.submit(class="btn btn-primary") }}</p>
     </form>
-</body>
-</html>
+{% endblock %}
