--- a/app/templates/students.html
+++ b/app/templates/students.html
@@ -1,20 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
 <h2>Student Profiles</h2>
+<a href="{{ url_for('main.add_student') }}" class="btn btn-primary mt-3">Add New Student</a>
 <table>
-    <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Grade Level</th>
-        <th>Enrollment Date</th>
-    </tr>
-    {% for student in students %}
-    <tr>
-        <td>{{ student.student_id }}</td>
-        <td>{{ student.first_name }} {{ student.last_name }}</td>
-        <td>{{ student.grade_level }}</td>
-        <td>{{ student.enrollment_date }}</td>
-    </tr>
-    {% endfor %}
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Class</th>
+            <th>Enrollment Date</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for student in students %}
+        <tr>
+            <td>{{ student.id }}</td>
+            <td>{{ student.first_name }} {{ student.last_name }}</td>
+            <td>{{ student.class_name }}</td>
+            <td>{{ student.enrollment_date }}</td>
+            <td>
+                <a href="{{ url_for('main.download_result', student_id=student.id) }}" class="btn btn-primary btn-sm">
+                    Download Result
+                </a>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
 </table>
 {% endblock %}
