--- a/app/templates/teachers.html
+++ b/app/templates/teachers.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <h2>Teachers</h2>
+<a href="{{ url_for('main.add_teacher') }}" class="btn btn-primary mt-3">Add New Teacher</a>
 <table>
     <thead>
         <tr>
@@ -18,6 +19,7 @@
             <th>Subjects</th>
             <th>Email</th>
             <th>Phone</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -26,7 +28,7 @@
             <td>{{ teacher.id }}</td>
             <td>
                 {% if teacher.photo %}
-                    <img src="{{ url_for('static', filename='uploads/' + teacher.photo) }}" alt="Photo" width="50">
+                    <img src="{{ url_for('main.uploaded_file', filename=teacher.photo) }}" alt="Photo" width="50">
                 {% else %}
                     No Photo
                 {% endif %}
@@ -46,9 +48,15 @@
             </td>
             <td>{{ teacher.email }}</td>
             <td>{{ teacher.phone_number }}</td>
+            <td>
+                <a href="{{ url_for('main.edit_teacher', teacher_id=teacher.id) }}" class="btn btn-warning btn-sm">Edit</a>
+                <form action="{{ url_for('main.delete_teacher', teacher_id=teacher.id) }}" method="POST" style="display:inline;">
+                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this teacher?');">Delete</button>
+                </form>
+            </td>
         </tr>
         {% endfor %}
     </tbody>
 </table>
-<a href="{{ url_for('main.add_teacher') }}" class="cta-button">Add New Teacher</a>
+
 {% endblock %}
