--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -32,6 +32,8 @@
                     <ul class="dropdown-menu" aria-labelledby="subjectsAssessmentsDropdown">
                         <li><a class="dropdown-item" href="{{ url_for('main.subjects') }}">Subjects</a></li>
                         <li><a class="dropdown-item" href="{{ url_for('main.add_subject') }}">Add Subject</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('main.assign_subject_to_class') }}">Assign Subject to Class</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('main.view_class_subjects') }}">View Classes and Subjects</a></li>
                         <li><a class="dropdown-item" href="{{ url_for('main.assessments') }}">Assessments</a></li>
                         <li><a class="dropdown-item" href="{{ url_for('main.assessment_types') }}">Assessment Types</a></li>
                         <li><a class="dropdown-item" href="{{ url_for('main.assessment_subject_scores') }}">Assessment Subject Scores</a></li>
